operator/pkg/gateway-api/testdata/gateway/listenerset-http-routing/output/gateway-with-listener-sets-http-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: gateway-with-listener-sets-http-routing
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: gateway-listener-1.com
      name: gateway-listener-1
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: gateway-listener-2.com
      name: gateway-listener-2
      port: 81
      protocol: HTTP
status:
  attachedListenerSets: 2
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 3
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: gateway-listener-1
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 2
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: gateway-listener-2
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
