operator/pkg/gateway-api/testdata/gateway/listenerset-http-routing/output/httproute-gateway-section-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: gateway-section-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
    - name: gateway-with-listener-sets-http-routing
      namespace: gateway-conformance-infra
      sectionName: gateway-listener-1
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-with-listener-sets-http-routing
        namespace: gateway-conformance-infra
        sectionName: gateway-listener-1
