operator/pkg/gateway-api/testdata/gateway/listenerset-http-routing/output/httproute-listener-set-http-routing-1-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: listener-set-http-routing-1-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-1
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: listener-set-http-routing-1
        namespace: gateway-conformance-infra
