operator/pkg/gateway-api/testdata/gateway/listenerset-http-routing/output/listenerset-listener-set-http-routing-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: listener-set-http-routing-1
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-with-listener-sets-http-routing
    namespace: gateway-conformance-infra
  listeners:
    - name: listener-set-http-routing-1-listener-1
      port: 8080
      protocol: HTTP
      hostname: ls1-listener-1.com
      allowedRoutes:
        namespaces:
          from: All
    - name: listener-set-http-routing-1-listener-2
      port: 8081
      protocol: HTTP
      hostname: ls1-listener-2.com
      allowedRoutes:
        namespaces:
          from: All
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 3
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: listener-set-http-routing-1-listener-1
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 2
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: listener-set-http-routing-1-listener-2
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
